# Automomus-Product-Catalogue-Cleaning-System

./: .gitignore  README.md  databaseview.py  main.py  pyproject.toml  requirements.txt  setup.py
agents/: product_cleaner.py
backend/: main.py
data/: messy-data2.xlsx  messy_product_catalog.csv  products.db
db/: database.py
frontend/: app.py
models/: product_model.py
schemas/: schema.py
utils/: tools.py
